--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "express": "^4.16.4",
+    "planck-js": "^0.3.0-rc.2",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {},
