--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,21 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "@colyseus/monitor": "^0.1.10",
+    "colyseus": "^0.9.21",
     "express": "^4.16.4",
     "planck-js": "^0.3.0-rc.2",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "uws": "^99.0.0",
+    "ts-node": "^5.0.1",
+    "typescript": "^2.7.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "ts-node": "^5.0.1"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node index.ts"
   },
   "author": "",
   "license": "ISC"
